src/yini_test/cases/golden/lenient/valid/concatenation/multiline-after-plus.yini
@yini

^ Concat
message = "hello" +
    " " +
    "world"
