src/yini_test/cases/golden/lenient/invalid/concatenation/list-concatenation.yini
@yini

^ Concat
items = ["a"] + ["b"]
